# -

./: README.md
my-robot-2025_v2/: .rustc_info.json  Cargo.toml
my-robot-2025_v2/.cargo/: config.toml
my-robot-2025_v2/module_common/: Cargo.toml
my-robot-2025_v2/module_common/src/: lib.rs
my-robot-2025_v2/module_hardware/: Cargo.toml  sdkconfig.defaults
my-robot-2025_v2/module_hardware/.cargo/: config.toml
print_models/: robot_2nd_floor.SLDPRT  robot_base.SLDPRT  robot_dc_module.SLDPRT
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/nav2_common/share/nav2_common/: local_setup.sh  package.sh
ros2_ws/install/nav2_common/share/nav2_common/cmake/: nav2_commonConfig.cmake
ros2_ws/install/nav2_loopback_sim/share/nav2_loopback_sim/: package.sh
ros2_ws/install/py_robot_2025_base/lib/py_robot_2025_base/: base
ros2_ws/install/py_robot_2025_base/share/py_robot_2025_base/: package.sh  package.zsh
ros2_ws/install/rplidar_ros/lib/rplidar_ros/: rplidar_node
ros2_ws/install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh
ros2_ws/install/tutoric/share/tutoric/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/ros_ws_robot_2025/: READM.ME
ros2_ws/src/ros_ws_robot_2025/install/: local_setup.sh  setup.sh
ros2_ws/src/ros_ws_robot_2025/install/py_pubsub/share/py_pubsub/: package.xml
ros2_ws/src/ros_ws_robot_2025/install/turtlesim/lib/turtlesim/: draw_square  mimic  (+1 more)
ros2_ws/src/ros_ws_robot_2025/log/: latest_build
ros2_ws/src/ros_ws_robot_2025/src/py_robot_2025_base/: setup.cfg  setup.py
ros2_ws/src/ros_ws_robot_2025/src/py_robot_2025_base/py_robot_2025_base/: base.py
ros2_ws/src/tutoric/: package.xml  robot.urdf
ros_ws/src/tutoric/: setup.py
(+8 files in other folders)
